--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,24 +1,34 @@
-name: Docker Image CI
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout del repositorio
+      - name: 🧾 Checkout repo
         uses: actions/checkout@v3
 
-      - name: Login en DockerHub
-        uses: docker/login-action@v3
+      - name: ☕ Set up Java 17
+        uses: actions/setup-java@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          java-version: '17'
+          distribution: 'temurin'
 
-      - name: Construir y subir imagen
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/productos-api:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/productos-api:latest
+      - name: 🔧 Make Maven wrapper executable
+        run: chmod +x mvnw
+
+      - name: 📦 Build with Maven
+        run: ./mvnw clean package -DskipTests
+
+      - name: 🔐 Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: 🐳 Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/farmaciascomunales-productos:latest .
+
+      - name: 🚀 Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/farmaciascomunales-productos:latest
